# NeuroQuant

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  RUN_GUIDE.md  config.py  config.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_ptq_qat_production.py  test_thesis_polish.py
.claude/: settings.local.json
.github/workflows/: tests.yml
api_reference/: index.html
data/: data_loader.py
docs/: PROJECT_REPORT.md  USAGE.md  WAVES_EXPLAINED.md  api_reference.md  getting_started.md  index.md  library_mode.md  pipeline_mode.md
docs/architecture/: wave1.md  wave2.md  wave3.md  wave4.md  wave5.md  wave6.md  wave7.md
examples/: __init__.py  mobilenet_cifar.py
library_mode/: index.html
models/: model_loader.py
neuroquant/: __init__.py  cli.py  config.py
neuroquant/data/: __init__.py  data_loader.py
neuroquant/models/: __init__.py  model_loader.py
neuroquant/quantization/: __init__.py  _default_config.yaml  adaround.py  alpha_search.py  awq.py  base.py  bn_folding.py  gptq.py  hessian_clustering.py  latency_lut.py  nsga_ii_search.py  ptq.py  qat.py  smoothquant.py  smoothquant_gptq.py
neuroquant/tracking/: __init__.py  mlflow_logger.py
neuroquant/utils/: __init__.py  common.py  deployment_export.py
neuroquant/visualization/: __init__.py  error_attribution.py  pareto_analysis.py  report.py  sensitivity.py  style.py
neuroquant/xai/: __init__.py  explainability.py
pipeline_mode/: index.html
quantization/: __init__.py  _default_config.yaml  adaround.py  awq.py  base.py  fitcompress.py  gptq.py  hessian_clustering.py  latency_lut.py  nsga_ii_search.py  ptq.py  qat.py  smoothquant.py  smoothquant_gptq.py  surrogate.py
scripts/: serve_mlflow.py
search/: search_index.json
site/: sitemap.xml
site/PROJECT_REPORT/: index.html
site/USAGE/: index.html
site/WAVES_EXPLAINED/: index.html
site/api_reference/: index.html
site/architecture/wave1/: index.html
site/architecture/wave2/: index.html
site/architecture/wave3/: index.html
site/architecture/wave4/: index.html
site/architecture/wave5/: index.html
site/architecture/wave6/: index.html
site/architecture/wave7/: index.html
site/getting_started/: index.html
site/search/: search_index.json
tests/: conftest.py  test_config.py  test_detection.py  test_genericity.py  test_genericity_config.py  test_imports.py  test_metrics.py  test_ptq_qat_production.py  test_ptq_wiring.py  test_quantizers.py  test_thesis_polish.py  test_wave1_production.py  test_wave2_production.py  test_wave3_production.py  test_wave4_production.py  test_wave5_production.py  test_wave6_production.py  test_wave7_production.py  test_xai_outputs.py
tests/integration/: test_full_pipeline_smoke.py
tracking/: mlflow_logger.py
utils/: checkpointing.py  common.py  deployment_export.py  metrics.py  numerics.py  onnx_export.py
visualization/: __init__.py  error_attribution.py  pareto_analysis.py  report.py  sensitivity.py  style.py
xai/: explainability.py
