# NeuroQuant v2.0 — Build + tooling configuration
#
# Single source of truth for:
#   * Project metadata + dependencies for ``pip install`` and wheel
#     builds (Wave 7 O1).
#   * Console-script entry points (Wave 7 O3 — ``neuroquant`` CLI).
#   * Pytest discovery + coverage configuration (Wave 6 K2).
#   * Coverage report thresholds and exclusions.
#
# Coverage target: ≥80% line coverage on the production packages
# (quantization, utils, tracking, visualization, config). The gate is
# enforced by pytest-cov via the ``--cov-fail-under`` flag below. CI
# (.github/workflows/tests.yml) runs the same command, so a regression
# below 80% breaks the build, not just the local report.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroquant"
version = "2.0.0"
description = "Production-grade neural-network quantization framework with NSGA + ONNX + hardware-aware search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NeuroQuant Authors"},
]
keywords = [
    "quantization", "deep-learning", "pytorch", "onnx",
    "ptq", "qat", "gptq", "smoothquant", "awq", "nsga",
    "neural-network-compression", "edge-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies. Mirrors ``requirements.txt`` for users who
# install from a checkout, but the wheel-installed copy gets these
# resolved automatically. Version floors match what's been verified
# in CI; no upper pin so transitive resolutions stay flexible.
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "pydantic>=2.5,<3.0",
    "mlflow>=2.10",
    "pymoo>=0.6.0",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.1",
]

[project.optional-dependencies]
# Test + lint extras — what CI installs after the runtime deps. Pin
# pytest>=8 because the strict-markers behaviour depends on it.
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
# Developer extras — adds linting on top of the test stack.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "build>=1.2",
]
# XAI is optional because shap pulls heavy transitive deps. Users
# who don't need Phase 3 explainability can skip it.
xai = [
    "shap>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/AbdelazizElHelaly11/NeuroQuant"
Documentation = "https://github.com/AbdelazizElHelaly11/NeuroQuant/blob/main/README.md"
Repository = "https://github.com/AbdelazizElHelaly11/NeuroQuant"
Issues = "https://github.com/AbdelazizElHelaly11/NeuroQuant/issues"

# Wave 7 O3: console-script entry point. Installs ``neuroquant`` as a
# command on PATH so users do not have to invoke ``python main.py``;
# ``main:main`` is the existing argparse-driven entry point that
# already handles config loading, CLI overrides, and pipeline
# execution.
[project.scripts]
neuroquant = "main:main"

[tool.setuptools]
packages = [
    "quantization",
    "utils",
    "tracking",
    "visualization",
    "data",
    "models",
    "xai",
]
# Top-level modules that aren't inside a package — they need explicit
# inclusion so the wheel ships them.
py-modules = ["config", "main"]
include-package-data = true

[tool.setuptools.package-data]
# Ship the bundled default config inside the wheel so ``neuroquant --init``
# can copy it to the user's working directory after a fresh ``pip install``.
# The file lives inside the ``quantization`` package and is loaded via
# ``importlib.resources`` (see ``main._run_init_command``).
"quantization" = ["_default_config.yaml"]

# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
# Pytest + coverage configuration (Wave 6 K2)
# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

[tool.pytest.ini_options]
# Default invocation discovers all ``test_*.py`` files under
# ``tests/``. Slow integration smokes live in ``tests/integration`` and
# are gated behind the ``integration`` marker so the default
# ``pytest`` invocation stays fast (<60s on CPU).
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: end-to-end smoke that runs the full pipeline (slow)",
    "slow: long-running test, opt-in via -m slow",
]
# Coverage flags. ``--cov-fail-under=80`` is the production gate;
# CI fails the build if any change drops coverage below this floor.
addopts = """
    --strict-markers
    -ra
    --cov=quantization
    --cov=utils
    --cov=tracking
    --cov=visualization
    --cov=config
    --cov-report=term-missing:skip-covered
    --cov-report=xml:coverage.xml
    --cov-fail-under=80
"""
filterwarnings = [
    # Torch onnx legacy exporter emits noisy deprecation warnings; the
    # legacy path is a deliberate choice (see utils/onnx_export.py).
    "ignore::DeprecationWarning:torch.onnx",
    "ignore::DeprecationWarning:onnxscript",
    "ignore::FutureWarning:matplotlib",
]

[tool.coverage.run]
# Line coverage only — the gate is "≥80% lines covered" per the wave-6
# spec. Branch coverage is more aggressive and would block the gate at
# ~78% on the current suite; deferred until wave 7 adds the
# integration smoke + extended NSGA property tests.
branch = false
source = [
    "quantization",
    "utils",
    "tracking",
    "visualization",
    "config",
]
omit = [
    # Optional / experimental modules.
    "*/__init__.py",
    "examples/*",
    "scripts/*",
    "test_*.py",
    "tests/*",
    "conftest.py",
]

[tool.coverage.report]
# A line that raises NotImplementedError or is gated on a missing
# optional dep can't be reached on a clean CI image; excluding them
# keeps the gate honest.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise OnnxUnavailable",
]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
