# NeuroQuant v2.0 — Build + tooling configuration
#
# Single source of truth for:
#   * Project metadata + dependencies for ``pip install`` and wheel
#     builds (Wave 7 O1).
#   * Console-script entry points (Wave 7 O3 — ``neuroquant`` CLI).
#   * Pytest discovery + coverage configuration (Wave 6 K2).
#   * Coverage report thresholds and exclusions.
#
# Coverage target: ≥80% line coverage on the production packages
# (quantization, utils, tracking, visualization, config). The gate is
# enforced by pytest-cov via the ``--cov-fail-under`` flag below. CI
# (.github/workflows/tests.yml) runs the same command, so a regression
# below 80% breaks the build, not just the local report.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroquant"
version = "2.0.0"
description = "Production-grade neural-network quantization framework with NSGA + ONNX + hardware-aware search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NeuroQuant Authors"},
]
keywords = [
    "quantization", "deep-learning", "pytorch", "onnx",
    "ptq", "qat", "gptq", "smoothquant", "awq", "nsga",
    "neural-network-compression", "edge-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies. Mirrors ``requirements.txt`` for users who
# install from a checkout, but the wheel-installed copy gets these
# resolved automatically. Version floors match what's been verified
# in CI; no upper pin so transitive resolutions stay flexible.
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "pydantic>=2.5,<3.0",
    "mlflow>=2.10",
    "pymoo>=0.6.0",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.1",
]

[project.optional-dependencies]
# Developer extras — linting + wheel building.
dev = [
    "ruff>=0.5",
    "build>=1.2",
]
# XAI is optional because shap pulls heavy transitive deps. Users
# who don't need Phase 3 explainability can skip it.
xai = [
    "shap>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/AbdelazizElHelaly11/NeuroQuant"
Documentation = "https://github.com/AbdelazizElHelaly11/NeuroQuant/blob/main/README.md"
Repository = "https://github.com/AbdelazizElHelaly11/NeuroQuant"
Issues = "https://github.com/AbdelazizElHelaly11/NeuroQuant/issues"

# Wave 7 O3: console-script entry point. Installs ``neuroquant`` as a
# command on PATH so users do not have to invoke ``python main.py``;
# ``main:main`` is the existing argparse-driven entry point that
# already handles config loading, CLI overrides, and pipeline
# execution.
[project.scripts]
neuroquant = "main:main"

[tool.setuptools]
packages = [
    "quantization",
    "utils",
    "tracking",
    "visualization",
    "data",
    "models",
    "xai",
]
# Top-level modules that aren't inside a package — they need explicit
# inclusion so the wheel ships them.
py-modules = ["config", "main"]
include-package-data = true

[tool.setuptools.package-data]
# Ship the bundled default config inside the wheel so ``neuroquant --init``
# can copy it to the user's working directory after a fresh ``pip install``.
# The file lives inside the ``quantization`` package and is loaded via
# ``importlib.resources`` (see ``main._run_init_command``).
"quantization" = ["_default_config.yaml"]

